== 0.6.0

* Enhancements
  * Updated to Contour 1.1.2 and use Contour pagination theme

== 0.5.4 (January 3, 2013)

* Security Fix
  * Updated Rails to 3.2.10

* Bug Fix
  * User activation emails are no longer sent out when a user's status is changed from pending to inactive

== 0.5.3 (November 28, 2012)

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * Contour updated to 1.1.1

== 0.5.2 (October 25, 2012)

* Enhancements
  * Restructured login page to give clearer distinctions between all of the login types
  * Added "Unknown" Citizenship Status category
  * Preceptors are now notified that they need to confirm emails after editing their existing email address

* Bug Fix
  * Removed TableScroll that was causing the column headers to not properly line up in some browsers
  * Fixed the link to the RSS feed

== 0.5.1 (September 17, 2012)

* Enhancements
  * Preceptor Other Support document now a file (docx, doc, pdf) upload
  * Administrators can export selected preceptor information to a CSV file
  * Preceptor page lists applicants who have the preceptor set as their primary or secondary preceptor
  * Deleting preceptors or applicants sets the email field to blank so that the email can be potentially reused
  * Applicant help buttons on applicant pages that create help request emails for the Training Grant Administrator

* Refactoring
  * Unused CV variable has been removed, (previously replaced by curriculum_vitae)

== 0.5.0 (August 28, 2012)

* Enhancements
  * Applicant updates
    * Multiple degrees can be added to applicants
      * Degree Type, Institution, Year, Advisor, Thesis, and Concentration / Major
    * Previous Institutions has been merged with Degrees Earned
    * Citizenship status is simplified
    * Research Interests are now required
  * Administrator updates
    * Notify applicants and trainees to fill out annual information
    * Modify submission date on applicant page