@@ -1,0 +1,1 @@
+$("#applicant_<%= @applicant.id %>_seminar_<%= @seminar.id %>_attendance").html("<%= escape_javascript(render("attendance")) %>");
