@@ -1,0 +1,3 @@
+<% @title = "Edit Seminar: #{@seminar.name}" %>
+
+<%= render 'form' %>
