@@ -1,0 +1,15 @@
+<% @title = 'Seminars' %>
+<div class="page-header">
+  <h1>
+    <%= @title %>
+    <%= link_to "Create Seminar", new_seminar_path, class: 'btn btn-mini btn-primary' %>
+  </h1>
+</div>
+
+<%= form_tag seminars_path, method: :get, remote: true, id: "seminars_search", class: 'form-search', data: { object: 'form-load' } do %>
+  <%= hidden_field_tag :order %>
+  <%= text_field_tag 'search', params[:search], class: 'search-query' %>
+  <%= submit_tag 'Search', class: 'btn btn-primary' %>
+<% end %>
+
+<div id="seminars"><center><%= image_tag "contour/ajax-loader.gif" %></center></div>
