@@ -1,0 +1,1 @@
+$("#seminars").html("<%= escape_javascript(render("seminars")) %>");
