@@ -1,0 +1,21 @@
+# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+
+one:
+  category: Grand Rounds
+  presenter: Professor Charles
+  presentation_title: Presentation About the Origin of the Universe as Related to Medicine
+  presentation_date: 2013-01-04 12:50:19
+  duration: 2
+  duration_units: hours
+  user_id: 1
+  deleted: false
+
+two:
+  category: Research-In-Progress
+  presenter: Bob the Trainee
+  presentation_title: My Incomplete Hypothesis
+  presentation_date: 2013-01-04 12:50:19
+  duration: 90
+  duration_units: minutes
+  user_id: 1
+  deleted: false
